--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -33,6 +33,9 @@
 .list
   list-style-type: none
 
+  +media-992
+    padding-left: 10px
+
   li
     padding-bottom: 5px
 
@@ -84,6 +87,10 @@
     text-decoration: none
     color: #101033
     transition: .3s
+
+.company
+  +media-992
+    padding-left: 0
 
 .copyright
   display: flex
