--- a/resources/assets/stylesheets/sass/blocks/main-previu/main-previu.sass
+++ b/resources/assets/stylesheets/sass/blocks/main-previu/main-previu.sass
@@ -132,6 +132,9 @@
     +media-1400
       font-size: 32px
 
+    +media-890
+      font-size: 4vw
+
   &__title_second
     font-family: NexaB
     font-size: 48px
@@ -142,6 +145,10 @@
 
     +media-1400
       font-size: 40px
+
+    +media-890
+      font-size: 5vw
+
 
     &:after
       content: ''
@@ -161,6 +168,9 @@
 
     +media-1400
       font-size: 22px
+
+    +media-890
+      font-size: 3.5vw
 
 .list-content
   display: flex
@@ -207,6 +217,14 @@
       width: 748px
       height: 15px
       z-index: 1
+
+      +media-890
+        width: 700px
+        background-position: right
+
+      +media-810
+        width: 630px
+
   &__title_inversion
     &:after
       content: ''
@@ -228,6 +246,12 @@
       +media-1024
         width: 650px
 
+      +media-890
+        width: 630px
+
+      +media-810
+        width: 590px
+
   &__text
     font-family: PTS-r
     font-size: 22px
@@ -236,12 +260,18 @@
     +media-1582
       font-size: 20px
 
+    +media-992
+      font-size: 2vw
+
   &-right
     //background: url("../../images/right-pc.png")
     //width: 437px
     //height: 437px
     margin-top: 115px
     margin-left: -120px
+
+    +media-992
+      margin-left: -180px
 
     +media-1100
       width: 35%
@@ -252,6 +282,12 @@
       //background: url("../../images/left-pc.png")
       margin-left: 70px
       margin-top: 65px
+
+      +media-955
+        margin-left: 35px
+
+      +media-890
+        margin-left: 0
 
 .block-help
   background: url("../../images/help-bg.png") center
@@ -379,6 +415,10 @@
     margin-left: 35px
     margin-right: 35px
 
+  +media-992
+    width: 20vw
+    height: 20vh
+
   &__item__text
     margin: 0 auto
     text-transform: uppercase
@@ -389,6 +429,8 @@
     +media-1582
       font-size: 40px
 
+    +media-992
+      font-size: 4vw
 
     &_sub
       display: flex
@@ -411,6 +453,9 @@
   +media-1024
     font-size: 20px
 
+  +media-992
+    font-size: 2vw
+
 .text_sub__second
   font-size: 46px
   margin-top: -20px
@@ -428,6 +473,9 @@
   +media-1024
     margin-top: 0px
     font-size:  26px
+
+  +media-992
+    font-size:  2.5vw
 
 
 
