--- a/resources/assets/stylesheets/sass/blocks/nav-bar/nav-bar.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-bar/nav-bar.sass
@@ -10,6 +10,13 @@
   background: none
   padding-top: 15px
 
+
+
+.navbar-collapse
+  +media-768
+    border: 0px
+    box-shadow: none
+
 .nav-side
   +media-1200
     padding-left: 0
@@ -18,6 +25,10 @@
   color: #fff
   padding-top: 10px
   padding-bottom: 10px
+
+  +media-800
+    padding-left: 10px
+    padding-right: 10px
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus
   background: #101033
@@ -30,6 +41,11 @@
   font-family: NexaL
   font-size: 18px
 
+.brand-header
+  +media-800
+    width: 90%
+
 .navbar-header__item_active
   background: #101033
   border-radius: 0px 10px 0px 10px
+
