--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -88,6 +88,9 @@
 =media-900
   @media only screen and (max-width: 900px)
     @content
+=media-890
+  @media only screen and (max-width: 890px)
+    @content
 =media-860
   @media only screen and (max-width: 860px)
     @content
