--- a/resources/assets/stylesheets/sass/helpers/mixins.sass
+++ b/resources/assets/stylesheets/sass/helpers/mixins.sass
@@ -35,4 +35,9 @@
     padding-left: 25px
     padding-right: 25px
 
+@media only screen and (max-width: 800px)
+  .container
+    padding-left: 15px
+    padding-right: 15px
+
 
