--- a/resources/views/shared/_nav-bar.njk
+++ b/resources/views/shared/_nav-bar.njk
@@ -9,7 +9,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#"><img src="/assets/images/logo.png" alt=""></a>
+				<a class="navbar-brand" href="#"><img class="brand-header" src="/assets/images/logo.png" alt=""></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,6 +19,7 @@
 					<li class="navbar-header__link"><a class="navbar-header__item" href="#">Support</a></li>
 					<li class="navbar-header__link "><a class="navbar-header__item navbar-header__item_active" href="#">Sigin up</a></li>
 				</ul>
+
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
