--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -28,6 +28,9 @@
   +media-992
     text-align: center
     padding-bottom: 50px
+    
+  +media-356
+    text-align: left
 
 .left-content__title
   font-family: NexaL
@@ -47,6 +50,12 @@
   +media-992
     font-size: 5vw
 
+  +media-576
+    font-size: 6vw
+
+  +media-420
+    font-size: 7vw
+
 .left-content__title__second
   font-family: NexaB
   color: #101033
@@ -64,6 +73,11 @@
 
   +media-992
     font-size: 5vw
+  +media-576
+    font-size: 6vw
+
+  +media-420
+    font-size: 7vw
 
 .left-content__title__third
   font-family: NexaL
@@ -79,6 +93,13 @@
   +media-992
     font-size: 2.5vw
 
+  +media-576
+    font-size: 3.5vw
+
+  +media-420
+    text-align: left
+    font-size: 4vw
+
 .text__indigo
   font-family: NexaB
   font-size: 30px
@@ -92,6 +113,12 @@
 
   +media-992
     font-size: 3vw
+
+  +media-576
+    font-size: 4vw
+
+  +media-420
+    font-size: 4.5vw
 
 .left-content__text
   padding-top: 10px
@@ -111,6 +138,12 @@
   +media-992
     font-size: 2vw
 
+  +media-576
+    font-size: 2.4vw
+
+  +media-420
+    text-align: left
+    font-size: 4vw
 
 .right-content
   position: relative
@@ -143,13 +176,22 @@
     left: 55%
     top: 15%
 
+    +media-380
+      left: 35%
+
   &-second
     top: 40%
     left: 5%
 
+    +media-380
+      left: 8%
+
   &-third
     top: 65%
     left: 55%
+
+    +media-380
+      left: 35%
 
   &__item
     margin: 0 auto
