--- a/resources/assets/stylesheets/sass/blocks/lbtn/lbtn.sass
+++ b/resources/assets/stylesheets/sass/blocks/lbtn/lbtn.sass
@@ -18,6 +18,18 @@
     height: 55px
     font-size: 24px
 
+  +media-740
+    width: 200px
+    font-size: 3vw
+    padding-left: 23px
+    padding-right: 23px
+
+  +media-576
+    font-size: 4vw
+
+  +media-420
+    line-height: 35px
+
   &:hover
     text-decoration: none
     transition: .3s
