--- a/resources/views/shared/_nav-bar.njk
+++ b/resources/views/shared/_nav-bar.njk
@@ -19,7 +19,7 @@
 					<li class="navbar-header__link"><a class="navbar-header__item" href="#">Support</a></li>
 					<li class="navbar-header__link "><a class="navbar-header__item navbar-header__item_active" href="#">Sigin up</a></li>
 				</ul>
-
+				{% include "shared/_nav-pagin.njk" %}
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
