--- a/resources/assets/stylesheets/sass/blocks/nav-bar/nav-bar.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-bar/nav-bar.sass
@@ -13,6 +13,8 @@
 
 
 .navbar-collapse
+  padding-left: 0
+
   +media-768
     border: 0px
     box-shadow: none
@@ -30,16 +32,24 @@
     padding-left: 10px
     padding-right: 10px
 
+  +media-768
+    padding-left: 15px
+    padding-right: 15px
+
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus
   background: #101033
   color: #fff
   border-radius: 0px 10px 0px 10px
   transition: .3s
 
+
 .navbar-header__right
   padding-top: 10px
   font-family: NexaL
   font-size: 18px
+
+  +media-768
+    padding-left: 15px
 
 .brand-header
   +media-800
@@ -48,4 +58,7 @@
 .navbar-header__item_active
   background: #101033
   border-radius: 0px 10px 0px 10px
+
+  +media-768
+    background: none
 
