--- a/resources/assets/stylesheets/sass/blocks/nav-pagin/nav-pagin.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-pagin/nav-pagin.sass
@@ -1,6 +1,7 @@
 .block-pagin
   display: flex
   flex-direction: column
+  padding-left: 0
 
   &:after
     content: ''
@@ -17,22 +18,51 @@
     +media-1200
       width: 99%
       margin-left: 0
+    +media-768
+      display: none
+
+  &:before
+    +media-768
+      content: ''
+      display: block
+      background: #fff
+      height: 3px
+      width: 99%
+      margin-top: 30px
+      margin-left: 0
+      opacity: .25
 
 .nav-pagin
   list-style-type: none
   display: flex
   flex-direction: row
   justify-content: left
-  padding-top: 30px
-  padding-left: 20px
+  padding-top: 70px
+  padding-left: 0px
 
   +media-1200
     padding-left: 0
+
+  +media-768
+    flex-direction: column
+    padding-top: 35px
+
 
 .nav__pagin
   margin-right: 5px
   //padding: 10px 15px
   display: flex
+
+  +media-768
+    transition: .3s
+    &:hover
+      text-decoration: none
+      background: #101033
+      color: #fff
+      //padding: 10px 15px
+      border-radius: 0px 10px 0px 10px
+      transition: .3s
+
 
   &__vline
     &:after
@@ -47,6 +77,9 @@
         height: 46px
         margin-left: 5px
 
+      +media-768
+        display: none
+
 .nav__demo
   margin-right: 75px
   background: #101033
@@ -57,6 +90,9 @@
 
   +media-915
     margin-right: 15px
+
+  +media-768
+    background: none
 
 
 
@@ -71,11 +107,17 @@
     +media-915
       font-size: 1.8vw
 
+    +media-560
+      font-size: 18px
+
   &_md
     font-size: 20px
 
     +media-915
       font-size: 2vw
+
+    +media-560
+      font-size: 18px
 
   &:hover
     text-decoration: none
@@ -84,3 +126,7 @@
     //padding: 10px 15px
     border-radius: 0px 10px 0px 10px
     transition: .3s
+
+    +media-768
+      background: none
+      border-radius: 0px
