--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -103,6 +103,9 @@
 =media-768
   @media only screen and (max-width: 768px)
     @content
+=media-740
+  @media only screen and (max-width: 740px)
+    @content
 =media-720
   @media only screen and (max-width: 720px)
     @content
@@ -120,6 +123,9 @@
     @content
 =media-576
   @media only screen and (max-width: 576px)
+    @content
+=media-560
+  @media only screen and (max-width: 560px)
     @content
 =media-500
   @media only screen and (max-width: 500px)
