--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -34,6 +34,12 @@
 =media-1366
   @media only screen and (max-width: 1366px)
     @content
+=media-1345
+  @media only screen and (max-width: 1345px)
+    @content
+=media-1315
+  @media only screen and (max-width: 1315px)
+    @content
 =media-1280
   @media only screen and (max-width: 1280px)
     @content
@@ -48,6 +54,9 @@
     @content
 =media-1200
   @media only screen and (max-width: 1200px)
+    @content
+=media-1170
+  @media only screen and (max-width: 1170px)
     @content
 =media-1155
   @media only screen and (max-width: 1155px)
