--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -22,8 +22,11 @@
 		<div class="right-content">
 			<div class="sircle-block">
 				<div class="sircle sircle-first"><span class="sircle__item">product<br> image</span></div>
+				<div class="shadow shadow-f"></div>
 				<div class="sircle sircle-second"><span class="sircle__item">product<br> image</span></div>
+				<div class="shadow shadow-s"></div>
 				<div class="sircle sircle-third"><span class="sircle__item">product<br> image</span></div>
+				<div class="shadow shadow-t"></div>
 
 			</div>
 		</div>
