--- a/resources/views/layouts/layout.njk
+++ b/resources/views/layouts/layout.njk
@@ -5,7 +5,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Piu Del Cibo</title>
+    <title>Accessability Assistant</title>
 
     {#<link rel="stylesheet" href="../../assets/images/fontello-c1fa6708/css/fontello.css">#}
 
