--- a/resources/assets/stylesheets/sass/blocks/lbtn/lbtn.sass
+++ b/resources/assets/stylesheets/sass/blocks/lbtn/lbtn.sass
@@ -42,8 +42,11 @@
       color: #fff
       background: #101033
 
+
   &__active
+    transition: none
     background: #101033
+    border-radius: 0px 15px 0px 15px
 
   &-right
     float: right
