--- a/resources/assets/stylesheets/sass/blocks/nav-pagin/nav-pagin.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-pagin/nav-pagin.sass
@@ -82,8 +82,8 @@
 
 .nav__demo
   margin-right: 75px
-  background: #101033
-  border-radius: 0px 10px 0px 10px
+  //background: #101033
+  //border-radius: 0px 10px 0px 10px
 
   +media-1200
     margin-right: 35px
@@ -98,7 +98,7 @@
 
 .pagin__link
   color: #fff
-  padding: 10px 15px
+  padding: 10px 10px
 
   &_sm
     font-size: 18px
@@ -118,6 +118,11 @@
 
     +media-560
       font-size: 18px
+
+  &__active
+    background: #101033
+    border-radius: 0px 10px 0px 10px
+
 
   &:hover
     text-decoration: none
