--- a/resources/views/shared/_nav-pagin.njk
+++ b/resources/views/shared/_nav-pagin.njk
@@ -1,6 +1,6 @@
 <div class=" container block-pagin">
 	<ul class="nav-pagin">
-		<li class="nav__pagin nav__demo"><a href="#" class="pagin__link pagin__link_sm">Request a demo</a></li>
+		<li class="nav__pagin nav__demo"><a href="#" class="pagin__link pagin__link__active pagin__link_sm">Request a demo</a></li>
 		<li class="nav__pagin nav__pagin__vline"><a href="#" class="pagin__link pagin__link_md">Technology</a></li>
 		<li class="nav__pagin nav__pagin__vline"><a href="#" class="pagin__link pagin__link_md">Products</a></li>
 		<li class="nav__pagin nav__pagin__vline"><a href="#" class="pagin__link pagin__link_md">Accessability</a></li>
