cheng png to svg

--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -221,7 +221,7 @@
     display: inline-block
     width: 93px
     height: 56px
-    background: url("../../images/rectangl.png")
+    background: url("../../images/rectangl.svg")
     position: absolute
     //font-family: NexaB
     //font-size: 24px
