--- a/resources/assets/stylesheets/sass/blocks/main-previu/main-previu.sass
+++ b/resources/assets/stylesheets/sass/blocks/main-previu/main-previu.sass
@@ -522,7 +522,7 @@
   +media-660
     padding-bottom: 45px
 
-  +media-420
+  +media-425
     flex-direction: column
     justify-content: center
 
@@ -570,10 +570,10 @@
     height: 10vh
     width: 17vw
 
-  +media-420
+  +media-425
     margin: 0 auto
-    width: 35vw
-    height: 15vh
+    width: 200px
+    height: 200px
 
   &__item__text
     margin: 0 auto
@@ -587,6 +587,9 @@
 
     +media-992
       font-size: 4vw
+
+    +media-425
+      font-size: 6vw
 
     &_sub
       display: flex
@@ -612,7 +615,7 @@
   +media-992
     font-size: 2vw
 
-  +media-420
+  +media-425
     padding-top: 5px
     font-size: 4vw
 
@@ -637,7 +640,7 @@
   +media-992
     font-size:  2.5vw
 
-  +media-420
+  +media-425
     font-size: 5vw
 
 
