--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -142,6 +142,9 @@
 =media-480
   @media only screen and (max-width: 480px)
     @content
+=media-425
+  @media only screen and (max-width: 425px)
+    @content
 =media-420
   @media only screen and (max-width: 420px)
     @content
