--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -21,13 +21,24 @@
 		</div>
 		<div class="right-content">
 			<div class="sircle-block">
-				<div class="sircle sircle-first"><span class="outs outs__first">img2</span><span class="sircle__item">product<br> image</span></div>
-				<div class="shadow shadow-f"></div>
-				<div class="sircle sircle-second"><span class="outs outs__second">img1</span><span class="sircle__item">product<br> image</span></div>
-				<div class="shadow shadow-s"></div>
-				<div class="sircle sircle-third"><span class="outs outs__third">img3</span><span class="sircle__item">product<br> image</span></div>
-				<div class="shadow shadow-t"></div>
+				<div class="sircle sircle-first">
+					<span class="outs outs__first">img2</span>
+					<span class="sircle__item">product<br> image</span>
 
+				</div>
+				<div class="shadow shadow-f"></div>
+				<div class="sircle sircle-second">
+					<span class="outs outs__second">img1</span>
+					<span class="sircle__item">product<br> image</span>
+
+				</div>
+				<div class="shadow shadow-s"></div>
+				<div class="sircle sircle-third">
+					<span class="outs outs__third">img3</span>
+					<span class="sircle__item">product<br> image</span>
+
+				</div>
+				<div class="shadow shadow-t"></div>
 			</div>
 		</div>
 	</div>
