--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -46,6 +46,9 @@
 =media-1240
   @media only screen and (max-width: 1240px)
     @content
+=media-1235
+  @media only screen and (max-width: 1235px)
+    @content
 =media-1225
   @media only screen and (max-width: 1225px)
     @content
