--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -22,18 +22,39 @@
 		<div class="right-content">
 			<div class="sircle-block">
 				<div class="sircle sircle-first">
+					<svg class="line-svg line-svg-f" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="96" height="59" viewBox="0 0 96 59">
+						<defs>
+							<path id="a" d="M1100 417v-3h62v1.12l30.35 52.57-2.6 1.5-30.13-52.19z"/>
+						</defs>
+						<use fill="#101033" xlink:href="#a" transform="translate(-1098 -412)"/>
+					</svg>
+
 					<span class="outs outs__first">img2</span>
 					<span class="sircle__item">product<br> image</span>
 
 				</div>
 				<div class="shadow shadow-f"></div>
 				<div class="sircle sircle-second">
+					<svg class="line-svg line-svg-s" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="96" height="59" viewBox="0 0 96 59">
+						<defs>
+							<path id="a" d="M1100 417v-3h62v1.12l30.35 52.57-2.6 1.5-30.13-52.19z"/>
+						</defs>
+						<use fill="#101033" xlink:href="#a" transform="translate(-1098 -412)"/>
+					</svg>
+
 					<span class="outs outs__second">img1</span>
 					<span class="sircle__item">product<br> image</span>
 
 				</div>
 				<div class="shadow shadow-s"></div>
 				<div class="sircle sircle-third">
+					<svg class="line-svg line-svg-t" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="96" height="59" viewBox="0 0 96 59">
+						<defs>
+							<path id="a" d="M1100 417v-3h62v1.12l30.35 52.57-2.6 1.5-30.13-52.19z"/>
+						</defs>
+						<use fill="#101033" xlink:href="#a" transform="translate(-1098 -412)"/>
+					</svg>
+
 					<span class="outs outs__third">img3</span>
 					<span class="sircle__item">product<br> image</span>
 
