--- a/resources/assets/stylesheets/sass/blocks/nav-bar/nav-bar.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-bar/nav-bar.sass
@@ -1,7 +1,19 @@
+.nav-scroll-top
+  transition: .5s
+
+  &-active
+    width: 100%
+    height: 100px
+    background: #fff
+    opacity: 0.95
+    position: fixed
+    //left: 17%
+    z-index: 3
+    transition: .3s
+
 .navbar-block
-  //position: fixed
-  //left: 17%
-  //z-index: 1
+  +media-992
+    padding-right: 0
 
 .navbar-default
   border: 0
@@ -9,8 +21,6 @@
   box-shadow: none
   background: none
   padding-top: 15px
-
-
 
 .navbar-collapse
   padding-left: 0
@@ -20,6 +30,10 @@
     box-shadow: none
 
 .nav-side
+  padding-right: 0
+  &-scroll
+    display: flex
+
   +media-1200
     padding-left: 0
 
@@ -52,9 +66,16 @@
   +media-768
     padding-left: 15px
 
+  &_disable
+    display: none
+
 .brand-header
   +media-800
     width: 90%
+
+  &-disable
+    +media-915
+      width: 85%
 
 .navbar-header__item_active
   background: #101033
@@ -63,3 +84,9 @@
   +media-768
     background: none
 
+.navbar-toggle
+
+  &-scroll
+    position: fixed
+    right: 0
+    top: 3%
