--- a/resources/assets/stylesheets/sass/blocks/nav-pagin/nav-pagin.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-pagin/nav-pagin.sass
@@ -2,24 +2,8 @@
   display: flex
   flex-direction: column
   padding-left: 0
-
-  &:after
-    content: ''
-    display: block
-    background: #fff
-    height: 3px
-    width: 1243px
-    margin-top: 30px
-    margin-left: 20px
-    opacity: .25
-
-    +media-1280
-      width: 97%
-    +media-1200
-      width: 99%
-      margin-left: 0
-    +media-768
-      display: none
+  padding-right: 0
+  border-bottom: 3px solid rgba(255,255,255,0.2)
 
   &:before
     +media-768
@@ -28,7 +12,7 @@
       background: #fff
       height: 3px
       width: 99%
-      margin-top: 30px
+      margin-top: 15px
       margin-left: 0
       opacity: .25
 
@@ -40,18 +24,25 @@
   padding-top: 70px
   padding-left: 0px
 
+  &-scroll
+    justify-content: center
+    padding-top: 15px
+
   +media-1200
     padding-left: 0
 
   +media-768
     flex-direction: column
-    padding-top: 35px
+    padding-top: 25px
 
 
 .nav__pagin
   margin-right: 5px
   //padding: 10px 15px
   display: flex
+
+  &:last-child
+    //display: none
 
   +media-768
     transition: .3s
@@ -82,8 +73,6 @@
 
 .nav__demo
   margin-right: 75px
-  //background: #101033
-  //border-radius: 0px 10px 0px 10px
 
   +media-1200
     margin-right: 35px
@@ -94,7 +83,9 @@
   +media-768
     background: none
 
-
+.nav__demor-clf
+  margin-right: 0
+  margin-top: 15px
 
 .pagin__link
   color: #fff
@@ -104,8 +95,22 @@
     font-size: 18px
     text-transform: uppercase
 
+    &-scroll
+      color: #fff
+
+      +media-890
+        padding-top: 15px
+
+    +media-1070
+      font-size: 17px
+    +media-1024
+      font-size: 16px
+
     +media-915
-      font-size: 1.8vw
+      font-size: 1.5vw
+
+    +media-860
+      font-size: 1.3vw
 
     +media-560
       font-size: 18px
@@ -113,8 +118,20 @@
   &_md
     font-size: 20px
 
+    &-scroll
+      color: #101033
+
+    +media-1070
+      font-size: 17px
+
+    +media-1024
+      font-size: 15px
+
     +media-915
-      font-size: 2vw
+      font-size: 1.9vw
+
+    +media-860
+      font-size: 1.5vw
 
     +media-560
       font-size: 18px
