--- a/resources/views/pages/404.njk
+++ b/resources/views/pages/404.njk
@@ -5,8 +5,8 @@
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="./images/favicon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="./images/favicon/apple-touch-icon.png" type="image/png">
+    {#<link rel="shortcut icon" href="./images/favicon/favicon.ico" type="image/x-icon">#}
+    {#<link rel="apple-touch-icon" href="./images/favicon/apple-touch-icon.png" type="image/png">#}
 
     <style>
 
