--- a/resources/views/shared/_nav-bar.njk
+++ b/resources/views/shared/_nav-bar.njk
@@ -1,26 +1,31 @@
-<div class="container navbar-block">
-	<nav class="navbar navbar-default">
-		<div class="container-fluid nav-side">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#"><img class="brand-header" src="/assets/images/logo.png" alt=""></a>
-			</div>
+<div class="container-fluid nav-scroll-top">
+	<div class="container navbar-block">
+		<nav class="navbar navbar-default">
+			<div class="container-fluid nav-side">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">
+						<img class="brand-header brand-header-active" src="/assets/images/logo.png" alt="Accessibility">
+						<img class="brand-header brand-header-disable " src="/assets/images/Logo-pic.png" alt="Accessibility">
+					</a>
+				</div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right navbar-header__right">
-					<li class="navbar-header__link"><a class="navbar-header__item" href="#">News</a></li>
-					<li class="navbar-header__link"><a class="navbar-header__item" href="#">Support</a></li>
-					<li class="navbar-header__link "><a class="navbar-header__item navbar-header__item_active" href="#">Sigin up</a></li>
-				</ul>
-				{% include "shared/_nav-pagin.njk" %}
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
-	</nav>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-right navbar-header__right">
+						<li class="navbar-header__link"><a class="navbar-header__item" href="#">News</a></li>
+						<li class="navbar-header__link"><a class="navbar-header__item" href="#">Support</a></li>
+						<li class="navbar-header__link "><a class="navbar-header__item navbar-header__item_active" href="#">Sigin up</a></li>
+					</ul>
+					{% include "shared/_nav-pagin.njk" %}
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
+	</div>
 </div>
