--- a/resources/views/shared/_nav-pagin.njk
+++ b/resources/views/shared/_nav-pagin.njk
@@ -1,10 +1,12 @@
 <div class=" container block-pagin">
 	<ul class="nav-pagin">
-		<li class="nav__pagin nav__demo"><a href="#" class="pagin__link pagin__link__active pagin__link_sm">Request a demo</a></li>
+		<li class="nav__pagin nav__demo nav__demol"><a href="#" class="pagin__link pagin__link__active pagin__link_sm">Request a demo</a></li>
 		<li class="nav__pagin nav__pagin__vline"><a href="#" class="pagin__link pagin__link_md">Technology</a></li>
 		<li class="nav__pagin nav__pagin__vline"><a href="#" class="pagin__link pagin__link_md">Products</a></li>
 		<li class="nav__pagin nav__pagin__vline"><a href="#" class="pagin__link pagin__link_md">Accessability</a></li>
 		<li class="nav__pagin nav__pagin__vline"><a href="#" class="pagin__link pagin__link_md">About us</a></li>
 		<li class="nav__pagin "><a href="#" class="pagin__link pagin__link_md">Login</a></li>
+		<li class="nav__pagin nav__demo nav__demor"><a href="#" class="pagin__link pagin__link__active pagin__link_sm">Request a demo</a></li>
+
 	</ul>
 </div>
